--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -58,7 +58,7 @@ const { title, description, date, updatedDate, heroImage } = Astro.props;
 		<Header />
 		<main>
 			<article>
-				<div class="hero-image">
+				<div class="hero-image" transition:animate="fade">
 					{heroImage && <img width={1020} height={510} src={`../../${heroImage}`} alt="" />}
 				</div>
 				<div class="prose">
