--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -9,7 +9,7 @@ const posts = (await getCollection('blog')).sort(
 ---
 
 <Layout>
-  <section class="adaptive-glass mx-auto flex max-w-4xl justify-center rounded-2xl p-8">
+  <section class="adaptive-glass mx-auto flex max-w-4xl justify-center p-8">
     <ul>
       {
         posts.map((post) => (
