--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,52 +1,186 @@
 ---
-import HeaderLink from '@components/HeaderLink.astro';
-import ThemeIcon from '@components/ThemeIcon.astro';
+import HeaderLink from "@components/HeaderLink.astro"
+import ThemeIcon from "@components/ThemeIcon.astro"
 ---
 
-<header>
-	<nav class="mx-auto flex h-24 max-w-7xl items-center justify-start px-4">
-		<div class="*:no-underline *:text-black *:dark:text-white hidden font-humaneThin text-7xl tracking-wide md:block">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
-		</div>
-    <div class="block md:hidden">
-      <svg class="size-8 *:text-black *:dark:text-white" data-slot="icon" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12"></path>
-      </svg> 
+<header class="header mt-2 sticky top-[-1px] z-20 max-w-7xl w-full mx-auto">
+  <nav
+    class="mx-auto mt-4 duration-300 transition rounded-full flex h-24 max-w-7xl items-center justify-start px-8"
+  >
+    <div
+      class="*:text-black *:dark:text-white hidden space-x-2 font-humaneThin text-7xl tracking-wider md:block"
+    >
+      <HeaderLink href="/">Home</HeaderLink>
+      <HeaderLink href="/blog">Blog</HeaderLink>
+      <HeaderLink href="/about">About</HeaderLink>
     </div>
-    <hr class="m-12 h-px grow border-0 bg-black dark:bg-white">
-		<div class="*:text-black *:dark:text-white flex gap-2">
-			<a href="https://fosstodon.org/@ndom91" target="_blank" class="border-b-4 border-transparent focus:border-b-4 focus:border-black focus:outline-none dark:focus:border-b-white">
-				<span class="sr-only">Follow ndom91 on Mastodon</span>
-				<svg viewBox="0 0 16 16" class="size-8" aria-hidden="true"
-					><path
-						fill="currentColor"
-						d="M11.19 12.195c2.016-.24 3.77-1.475 3.99-2.603.348-1.778.32-4.339.32-4.339 0-3.47-2.286-4.488-2.286-4.488C12.062.238 10.083.017 8.027 0h-.05C5.92.017 3.942.238 2.79.765c0 0-2.285 1.017-2.285 4.488l-.002.662c-.004.64-.007 1.35.011 2.091.083 3.394.626 6.74 3.78 7.57 1.454.383 2.703.463 3.709.408 1.823-.1 2.847-.647 2.847-.647l-.06-1.317s-1.303.41-2.767.36c-1.45-.05-2.98-.156-3.215-1.928a3.614 3.614 0 0 1-.033-.496s1.424.346 3.228.428c1.103.05 2.137-.064 3.188-.189zm1.613-2.47H11.13v-4.08c0-.859-.364-1.295-1.091-1.295-.804 0-1.207.517-1.207 1.541v2.233H7.168V5.89c0-1.024-.403-1.541-1.207-1.541-.727 0-1.091.436-1.091 1.296v4.079H3.197V5.522c0-.859.22-1.541.66-2.046.456-.505 1.052-.764 1.793-.764.856 0 1.504.328 1.933.983L8 4.39l.417-.695c.429-.655 1.077-.983 1.934-.983.74 0 1.336.259 1.791.764.442.505.661 1.187.661 2.046v4.203z"
-					></path></svg
-				>
-			</a>
-			<a href="https://twitter.com/ndom91" target="_blank" class="border-b-4 border-transparent focus:border-b-4 focus:border-black focus:outline-none dark:focus:border-b-white">
-				<span class="sr-only">Follow ndom91 on Twitter</span>
-				<svg viewBox="0 0 16 16" class="size-8" aria-hidden="true"
-					><path
-						fill="currentColor"
-						d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
-					></path></svg
-				>
-			</a>
-			<a href="https://github.com/ndom91" target="_blank" class="border-b-4 border-transparent focus:border-b-4 focus:border-black focus:outline-none dark:focus:border-b-white">
-				<span class="sr-only">Go to ndom91's GitHub repo</span>
-				<svg viewBox="0 0 16 16" class="size-8" aria-hidden="true"
-					><path
-						fill="currentColor"
-						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-					></path></svg
-				>
-			</a>
+    <div class="block md:hidden">
+      <svg
+        class="size-8 *:text-black *:dark:text-white"
+        data-slot="icon"
+        fill="none"
+        stroke-width="1.5"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+        aria-hidden="true"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12"></path>
+      </svg>
+    </div>
+    <hr class="m-12 h-px grow border-0 bg-black dark:bg-white" />
+    <div class="*:text-black *:dark:text-white flex gap-2">
+      <a
+        href="https://fosstodon.org/@ndom91"
+        target="_blank"
+        class="outline-none focus-visible:ring-2 focus-visible:dark:ring-white p-1 rounded-sm transition"
+      >
+        <span class="sr-only">Follow ndom91 on Mastodon</span>
+        <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
+          ><rect width="256" height="256" fill="none"></rect><path
+            d="M160,224H72a32,32,0,0,1-32-32V72A32,32,0,0,1,72,40H184a32,32,0,0,1,32,32v72a32,32,0,0,1-32,32H40"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></path><path
+            d="M128,136V104a24,24,0,0,0-48,0v32"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></path><path
+            d="M176,136V104a24,24,0,0,0-48,0"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></path></svg
+        >
+      </a>
+      <a
+        href="https://twitter.com/ndom91"
+        target="_blank"
+        class="outline-none focus-visible:ring-2 focus-visible:dark:ring-white p-1 rounded-sm transition"
+      >
+        <span class="sr-only">Follow ndom91 on Twitter</span>
+        <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
+          ><rect width="256" height="256" fill="none"></rect><polygon
+            points="48 40 96 40 208 216 160 216 48 40"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></polygon><line
+            x1="113.88"
+            y1="143.53"
+            x2="48"
+            y2="216"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></line><line
+            x1="208"
+            y1="40"
+            x2="142.12"
+            y2="112.47"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></line></svg
+        >
+      </a>
+      <a
+        href="https://github.com/ndom91"
+        target="_blank"
+        class="outline-none focus-visible:ring-2 focus-visible:dark:ring-white p-1 rounded-sm transition"
+      >
+        <span class="sr-only">Go to Nico's GitHub</span>
+        <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
+          ><rect width="256" height="256" fill="none"></rect><path
+            d="M119.83,56A52,52,0,0,0,76,32a51.92,51.92,0,0,0-3.49,44.7A49.28,49.28,0,0,0,64,104v8a48,48,0,0,0,48,48h48a48,48,0,0,0,48-48v-8a49.28,49.28,0,0,0-8.51-27.3A51.92,51.92,0,0,0,196,32a52,52,0,0,0-43.83,24Z"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></path><path
+            d="M104,232V192a32,32,0,0,1,32-32h0a32,32,0,0,1,32,32v40"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></path><path
+            d="M104,208H72a32,32,0,0,1-32-32A32,32,0,0,0,8,144"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></path></svg
+        >
+      </a>
+      <a
+        href="https://dub.sh/ndomino-fullstack"
+        target="_blank"
+        class="outline-none focus-visible:ring-2 focus-visible:dark:ring-white p-1 rounded-sm transition"
+      >
+        <span class="sr-only">Download Nico's Resume</span>
+        <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
+          ><rect width="256" height="256" fill="none"></rect><path
+            d="M200,224H56a8,8,0,0,1-8-8V40a8,8,0,0,1,8-8h96l56,56V216A8,8,0,0,1,200,224Z"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></path><polyline
+            points="152 32 152 88 208 88"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></polyline><line
+            x1="96"
+            y1="136"
+            x2="160"
+            y2="136"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></line><line
+            x1="96"
+            y1="168"
+            x2="160"
+            y2="168"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></line></svg
+        >
+      </a>
       <ThemeIcon />
-		</div>
-	</nav>
+    </div>
+  </nav>
 </header>
+
+<script>
+  const el = document.querySelector("header")
+
+  const observer = new IntersectionObserver(
+    ([e]) => e.target.classList.toggle("is-pinned", e.intersectionRatio < 1),
+    { threshold: [1] },
+  )
+
+  observer.observe(el!)
+</script>
+
 <style>
+  header.is-pinned nav {
+    @apply rounded-full backdrop-blur-lg dark:bg-neutral-900/10 bg-neutral-100/10 border dark:border-neutral-800/50 max-w-7xl w-full mx-auto;
+  }
 </style>
