--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -1,27 +1,33 @@
 ---
-import BaseHead from '@components/BaseHead.astro';
-import Header from '@components/Header.astro';
-import Footer from '@components/Footer.astro';
-import { ShaderBackground } from '@components/ShaderBackground.jsx'
-import { SITE_TITLE, SITE_DESCRIPTION } from '@src/consts';
+import BaseHead from "@components/BaseHead.astro"
+import Header from "@components/Header.astro"
+import Footer from "@components/Footer.astro"
+import { ShaderBackground } from "@components/ShaderBackground.jsx"
+import { SITE_TITLE, SITE_DESCRIPTION } from "@src/consts"
 
-import { ViewTransitions } from 'astro:transitions';
+import { ViewTransitions } from "astro:transitions"
 ---
 
-<!DOCTYPE html>
-<html lang="en" >
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+<!doctype html>
+<html lang="en">
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
     <ViewTransitions />
-	</head>
-	<body class="flex min-h-screen flex-col">
-		<Header title={SITE_TITLE} />
-    <main class="grid h-full grow place-items-center">
-      <slot />
-    </main>
-		<Footer />
-	</body>
-  <div class="absolute left-0 top-0 -z-10 h-screen w-screen overflow-hidden bg-zinc-900 text-gray-50">
-    <ShaderBackground client:only="react" transition:persist />
-  </div>
+  </head>
+  <body class="min-h-screen overflow-hidden bg-zinc-900">
+    <div
+      class="flex flex-col m-4 h-[calc(100vh_-_32px)] w-[calc(100vw_-_16px)] overflow-y-scroll text-gray-50"
+    >
+      <div class="flex flex-col dark:bg-neutral-800/50 bg-neutral-200/30">
+        <Header title={SITE_TITLE} transition:persist />
+        <main class="flex flex-col items-center min-h-[calc(100vh_-_256px)]">
+          <slot />
+        </main>
+        <Footer />
+      </div>
+      <div class="">
+        <ShaderBackground client:only="react" transition:persist />
+      </div>
+    </div>
+  </body>
 </html>
