--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
-import Layout from '@layouts/index.astro';
+import Layout from "@layouts/index.astro"
 ---
 
 <Layout>
-  <div class="relative h-2/3 w-2/3 bg-white bg-opacity-50 shadow-2xl shadow-zinc-600/50 backdrop-blur-xl dark:bg-opacity-80 dark:shadow-none">
-    <span class="absolute -left-12 bottom-28 rotate-[270deg] font-humane text-[12rem]">
+  <div class="relative h-2/3 w-full max-w-7xl bg-neutral-100/20 backdrop-blur-2xl">
+    <span
+      class="dark:text-white text-black absolute -left-12 bottom-28 rotate-[270deg] font-humane text-[12rem]"
+    >
       NDOM91
     </span>
   </div>
