--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
  */
 
 .adaptive-glass {
-  background: hsl(0 0% var(--glass-lightness) / 50%);
+  background: hsl(0 0% var(--glass-lightness) / 20%);
   backdrop-filter: blur(10px);
 }
 
@@ -64,4 +64,30 @@ html.dark {
   font-style: normal;
   font-weight: 400;
   text-rendering: optimizeLegibility;
+}
+
+/* SCROLLBAR */
+::-webkit-scrollbar {
+  width: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-clip: content-box;
+  background-color: #999;
+  border: 5px solid transparent;
+  border-radius: 20px;
+  transition: background-color 500ms ease-in-out;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  transition: background-color 500ms ease-in-out;
+}
+
+html.dark ::-webkit-scrollbar-thumb {
+  background-color: #aaa;
+}
+
+html.dark ::-webkit-scrollbar-track {
+  @apply bg-zinc-900;
 }
