--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -5,7 +5,7 @@
 <button
   id="themeToggle"
   transition:persist
-  class="outline-none focus-visible:ring-2 focus-visible:dark:ring-white p-1 rounded-sm transition"
+  class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
 >
   <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
@@ -41,36 +41,33 @@
 </style>
 
 <script>
-  document.addEventListener("astro:page-load", () => {
-    const theme = (() => {
-      if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
-        return localStorage.getItem("theme")
-      }
-      if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-        return "dark"
-      }
-      // Dark default
+  const theme = (() => {
+    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
+      return localStorage.getItem("theme")
+    }
+    if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
       return "dark"
-    })() as string
-
-    if (theme === "light") {
-      document.documentElement.classList.remove("dark")
-    } else {
-      document.documentElement.classList.add("dark")
     }
+    return "light"
+  })() as string
 
-    window.localStorage.setItem("theme", theme)
+  if (theme === "light") {
+    document.documentElement.classList.remove("dark")
+  } else {
+    document.documentElement.classList.add("dark")
+  }
 
-    const handleToggleClick = () => {
-      const element = document.documentElement
-      element.classList.toggle("dark")
+  window.localStorage.setItem("theme", theme)
 
-      const isDark = element.classList.contains("dark")
-      localStorage.setItem("theme", isDark ? "dark" : "light")
-    }
+  const handleToggleClick = () => {
+    const element = document.documentElement
+    element.classList.toggle("dark")
 
-    document.getElementById("themeToggle")?.addEventListener("click", handleToggleClick)
-  })
+    const isDark = element.classList.contains("dark")
+    localStorage.setItem("theme", isDark ? "dark" : "light")
+  }
+
+  document.getElementById("themeToggle")?.addEventListener("click", handleToggleClick)
 </script>
 
 <script>
