fix: tweak header and layout styles

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,7 +36,7 @@ import ThemeIcon from "@components/ThemeIcon.astro"
       <a
         href="https://fosstodon.org/@ndom91"
         target="_blank"
-        class="outline-none focus-visible:ring-2 focus-visible:dark:ring-white p-1 rounded-sm transition"
+        class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
       >
         <span class="sr-only">Follow ndom91 on Mastodon</span>
         <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
@@ -64,7 +64,7 @@ import ThemeIcon from "@components/ThemeIcon.astro"
       <a
         href="https://twitter.com/ndom91"
         target="_blank"
-        class="outline-none focus-visible:ring-2 focus-visible:dark:ring-white p-1 rounded-sm transition"
+        class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
       >
         <span class="sr-only">Follow ndom91 on Twitter</span>
         <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
@@ -98,7 +98,7 @@ import ThemeIcon from "@components/ThemeIcon.astro"
       <a
         href="https://github.com/ndom91"
         target="_blank"
-        class="outline-none focus-visible:ring-2 focus-visible:dark:ring-white p-1 rounded-sm transition"
+        class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
       >
         <span class="sr-only">Go to Nico's GitHub</span>
         <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
@@ -126,7 +126,7 @@ import ThemeIcon from "@components/ThemeIcon.astro"
       <a
         href="https://dub.sh/ndomino-fullstack"
         target="_blank"
-        class="outline-none focus-visible:ring-2 focus-visible:dark:ring-white p-1 rounded-sm transition"
+        class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
       >
         <span class="sr-only">Download Nico's Resume</span>
         <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
@@ -181,6 +181,6 @@ import ThemeIcon from "@components/ThemeIcon.astro"
 
 <style>
   header.is-pinned nav {
-    @apply rounded-full backdrop-blur-lg dark:bg-neutral-900/10 bg-neutral-100/10 border dark:border-neutral-800/50 max-w-7xl w-full mx-auto;
+    @apply rounded-full backdrop-blur-2xl dark:!bg-neutral-900/10 bg-neutral-100/10 border border-neutral-200/30 dark:!border-neutral-900/10 max-w-7xl w-full mx-auto;
   }
 </style>
