--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,9 @@ import Layout from "@layouts/index.astro"
 ---
 
 <Layout>
-  <div class="relative h-2/3 w-full max-w-7xl bg-neutral-100/20 backdrop-blur-2xl">
+  <div
+    class="relative h-2/3 w-full max-w-7xl bg-neutral-100/20 dark:bg-neutral-700/20 backdrop-blur-2xl"
+  >
     <span
       class="dark:text-white text-black absolute -left-12 bottom-28 rotate-[270deg] font-humane text-[12rem]"
     >
