fix: cleanup layout and astro:content "prose"

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,11 @@
 ---
 import HeaderLink from "@components/HeaderLink.astro"
-import ThemeIcon from "@components/ThemeIcon.astro"
+// import ThemeIcon from "@components/ThemeIcon.astro"
 ---
 
 <header class="header mt-2 sticky top-[-1px] z-20 max-w-7xl w-full mx-auto">
   <nav
-    class="mx-auto mt-4 duration-300 transition rounded-full flex h-24 max-w-7xl items-center justify-start px-8"
+    class="mx-auto mt-4 duration-300 transition rounded-full flex h-32 max-w-7xl items-center justify-start px-12"
   >
     <div
       class="*:text-black *:dark:text-white hidden space-x-2 font-humaneThin text-7xl tracking-wider md:block"
@@ -163,7 +163,7 @@ import ThemeIcon from "@components/ThemeIcon.astro"
             stroke-width="16"></line></svg
         >
       </a>
-      <ThemeIcon />
+      <!-- <ThemeIcon /> -->
     </div>
   </nav>
 </header>
