--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,32 +1,32 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
-import Layout from '@layouts/index.astro';
-import FormattedDate from '@components/FormattedDate.astro';
+import { CollectionEntry, getCollection } from "astro:content"
+import Layout from "@layouts/index.astro"
+import FormattedDate from "@components/FormattedDate.astro"
 
 export async function getStaticPaths() {
-	const posts = await getCollection('blog');
-	return posts.map((post) => ({
-		params: { slug: post.slug },
-		props: post,
-	}));
+  const posts = await getCollection("blog")
+  return posts.map((post) => ({
+    params: { slug: post.slug },
+    props: post,
+  }))
 }
-type Props = CollectionEntry<'blog'>;
+type Props = CollectionEntry<"blog">
 
-const post = Astro.props;
+const post = Astro.props
 const { title, description, date, updatedDate, heroImage } = post.data
-const { Content } = await post.render();
-
+const { Content } = await post.render()
 ---
 
 <Layout {...post.data}>
-  <article class="adaptive-glass mx-auto max-w-4xl p-8 text-black dark:text-white">
+  <article class="adaptive-glass rounded-lg mx-auto max-w-7xl p-8 text-black dark:text-white">
     <div class="hero-image" transition:animate="fade">
-      {heroImage && <img width={1020} height={510} src={`../../${heroImage}`} alt="" />}
+      {heroImage && <img class="w-100 rounded-md" src={`../../${heroImage}`} alt="" />}
     </div>
-    <div class="prose">
-      <div class="title">
-        <div class="date">
-          <FormattedDate date={date} />
+    <div class="flex my-4 flex-col justify-start items-start gap-4">
+      <div class="flex w-full justify-between">
+        <h1 class="text-2xl">{title}</h1>
+        <div class="flex text-xl flex-col items-end">
+          <FormattedDate class="" date={date} />
           {
             updatedDate && (
               <div class="last-updated-on">
@@ -35,50 +35,13 @@ const { Content } = await post.render();
             )
           }
         </div>
-        <h1>{title}</h1>
-        <hr />
       </div>
-      <Content />
+      <div class="prose">
+        <Content  />
+      </div>
     </div>
   </article>
 </Layout>
 
 <style>
-  main {
-    width: calc(100% - 2em);
-    max-width: 100%;
-    margin: 0;
-  }
-  .hero-image {
-    width: 100%;
-  }
-  .hero-image img {
-    display: block;
-    margin: 0 auto;
-    border-radius: 12px;
-    box-shadow: var(--box-shadow);
-  }
-  .prose {
-    width: 720px;
-    max-width: calc(100% - 2em);
-    margin: auto;
-    padding: 1em;
-    color: rgb(var(--gray-dark));
-  }
-  .title {
-    margin-bottom: 1em;
-    padding: 1em 0;
-    text-align: center;
-    line-height: 1;
-  }
-  .title h1 {
-    margin: 0 0 0.5em 0;
-  }
-  .date {
-    margin-bottom: 0.5em;
-    color: rgb(var(--gray));
-  }
-  .last-updated-on {
-    font-style: italic;
-  }
 </style>
