--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const today = new Date()
 ---
 
-<footer class="mx-auto flex h-24 w-full max-w-7xl items-center justify-start px-4">
+<footer class="z-10 mx-auto flex h-24 py-16 w-full max-w-7xl items-center justify-start px-4">
   <div class="font-humane text-3xl text-black dark:text-white">
     {today.getFullYear()}
   </div>
