--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,8 @@
 ---
 import HeaderLink from "@components/HeaderLink.astro"
-// import ThemeIcon from "@components/ThemeIcon.astro"
 ---
 
-<header class="header mt-2 sticky top-[-1px] z-20 max-w-7xl w-full mx-auto">
+<header class="header mt-2 sticky top-[-1px] z-10 max-w-7xl w-full mx-auto">
   <nav
     class="mx-auto mt-4 duration-300 transition rounded-full flex h-32 max-w-7xl items-center justify-start px-12"
   >
@@ -34,69 +33,8 @@ import HeaderLink from "@components/HeaderLink.astro"
     <hr class="m-12 h-px grow border-0 bg-black dark:bg-white" />
     <div class="*:text-black *:dark:text-white flex gap-2">
       <a
-        href="https://fosstodon.org/@ndom91"
-        target="_blank"
-        class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
-      >
-        <span class="sr-only">Follow ndom91 on Mastodon</span>
-        <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
-          ><rect width="256" height="256" fill="none"></rect><path
-            d="M160,224H72a32,32,0,0,1-32-32V72A32,32,0,0,1,72,40H184a32,32,0,0,1,32,32v72a32,32,0,0,1-32,32H40"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="16"></path><path
-            d="M128,136V104a24,24,0,0,0-48,0v32"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="16"></path><path
-            d="M176,136V104a24,24,0,0,0-48,0"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="16"></path></svg
-        >
-      </a>
-      <a
-        href="https://twitter.com/ndom91"
-        target="_blank"
-        class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
-      >
-        <span class="sr-only">Follow ndom91 on Twitter</span>
-        <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
-          ><rect width="256" height="256" fill="none"></rect><polygon
-            points="48 40 96 40 208 216 160 216 48 40"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="16"></polygon><line
-            x1="113.88"
-            y1="143.53"
-            x2="48"
-            y2="216"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="16"></line><line
-            x1="208"
-            y1="40"
-            x2="142.12"
-            y2="112.47"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="16"></line></svg
-        >
-      </a>
-      <a
         href="https://github.com/ndom91"
+        title="GitHub"
         target="_blank"
         class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
       >
@@ -125,6 +63,7 @@ import HeaderLink from "@components/HeaderLink.astro"
       </a>
       <a
         href="https://dub.sh/ndomino-fullstack"
+        title="Resume / CV"
         target="_blank"
         class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
       >
@@ -163,7 +102,70 @@ import HeaderLink from "@components/HeaderLink.astro"
             stroke-width="16"></line></svg
         >
       </a>
-      <!-- <ThemeIcon /> -->
+      <a
+        href="https://twitter.com/ndom91"
+        title="Twitter"
+        target="_blank"
+        class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
+      >
+        <span class="sr-only">Follow ndom91 on Twitter</span>
+        <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
+          ><rect width="256" height="256" fill="none"></rect><polygon
+            points="48 40 96 40 208 216 160 216 48 40"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></polygon><line
+            x1="113.88"
+            y1="143.53"
+            x2="48"
+            y2="216"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></line><line
+            x1="208"
+            y1="40"
+            x2="142.12"
+            y2="112.47"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></line></svg
+        >
+      </a>
+      <a
+        href="https://fosstodon.org/@ndom91"
+        title="Mastodon"
+        target="_blank"
+        class="outline-none focus-visible:ring-2 focus-visible:ring-neutral-800 focus-visible:dark:ring-white p-1 rounded-sm transition"
+      >
+        <span class="sr-only">Follow ndom91 on Mastodon</span>
+        <svg class="size-8" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
+          ><rect width="256" height="256" fill="none"></rect><path
+            d="M160,224H72a32,32,0,0,1-32-32V72A32,32,0,0,1,72,40H184a32,32,0,0,1,32,32v72a32,32,0,0,1-32,32H40"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></path><path
+            d="M128,136V104a24,24,0,0,0-48,0v32"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></path><path
+            d="M176,136V104a24,24,0,0,0-48,0"
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="16"></path></svg
+        >
+      </a>
     </div>
   </nav>
 </header>
@@ -181,6 +183,6 @@ import HeaderLink from "@components/HeaderLink.astro"
 
 <style>
   header.is-pinned nav {
-    @apply rounded-full backdrop-blur-2xl dark:!bg-neutral-900/10 bg-neutral-100/10 border border-neutral-200/30 dark:!border-neutral-900/10 max-w-7xl w-full mx-auto;
+    @apply rounded-full backdrop-blur-3xl dark:!bg-neutral-900/10 bg-neutral-100/10 border border-neutral-200/30 dark:!border-neutral-900/10 max-w-7xl w-full mx-auto;
   }
 </style>
