feat: add dot-domino logo

--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -22,7 +22,7 @@ import { ViewTransitions } from "astro:transitions"
     </div>
     <div class="flex flex-col h-screen w-dvw overflow-y-scroll">
       <Header title={SITE_TITLE} transition:persist />
-      <main class="flex flex-col items-center flex-grow">
+      <main class="flex flex-col items-center justify-center">
         <slot />
       </main>
       <Footer />
